--- a/src/components/Home/Services/Services.css
+++ b/src/components/Home/Services/Services.css
@@ -10,10 +10,6 @@
   text-align: center;
   color: gray;
 }
-.serviceImage {
-  width: 170px;
-  height: 240px;
-}
 .serviceButton {
   border-radius: 4px;
   background-color: #ffdd00;
@@ -23,11 +19,10 @@
   font-size: 19px;
   font-weight: 800;
   padding: 10px;
-  width: 140px;
+  width: 294px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
-  float: right;
 }
 
 .serviceButton span {
@@ -55,7 +50,7 @@
   right: 0;
 }
 @media (width: 360px) {
-  .serviceImage {
-    width: 335px;
+  .serviceButton {
+    width: 324px;
   }
 }
